--- a/.github/workflows/deploy_test.yml
+++ b/.github/workflows/deploy_test.yml
@@ -20,16 +20,16 @@ jobs:
     - name: Decrypt Secret Files
       run: ./.secret/decrypt.sh
       env:
-        CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
+        CERTIFICATE_PASSWORD: ${{ secrets.SECRETS_PASSWORD }}
     - name: Prepare to Deploy Tiqr App
       run: |
         bundle config set path 'vendor/bundle'
         bundle install
         bundle exec fastlane ios set_build_number
       env:
-        CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
+        CERTIFICATE_PASSWORD: ${{ secrets.SECRETS_PASSWORD }}
     - name: Deploy Tiqr Test App
       run: bundle exec fastlane ios deploy_test_ci --env test
       env:
-        CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
+        CERTIFICATE_PASSWORD: ${{ secrets.SECRETS_PASSWORD }}
         FIREBASE_CLI_TOKEN: ${{ secrets.FIREBASE_CLI_TOKEN }}
