--- a/Tiqr/Info.plist
+++ b/Tiqr/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Tiqr uses Face ID to login without a PIN</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Camera access is required for scanning QR codes for enrollement and authentication</string>
 	<key>NSAppTransportSecurity</key>
