--- a/Tiqr/Info.plist
+++ b/Tiqr/Info.plist
@@ -5,7 +5,7 @@
 	<key>NSFaceIDUsageDescription</key>
 	<string>Tiqr uses Face ID to login without a PIN</string>
 	<key>NSCameraUsageDescription</key>
-	<string>Camera access is required for scanning QR codes for enrollement and authentication</string>
+	<string>Tiqr uses the camera to scan QR-codes</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSExceptionDomains</key>
