TIQR-286: Enforce multiple hosts

--- a/Tiqr/Info.plist
+++ b/Tiqr/Info.plist
@@ -2,6 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>TIQRTokenExchangeURL</key>
+	<string>https://tx.tiqr.org/tokenexchange/?appId=</string>
+	<key>TIQRTokenExchangeEnabled</key>
+	<true/>
+	<key>TIQREnforceChallengeHosts</key>
+	<string>$(TIQR_ENFORCE_CHALLENGE_HOSTS)</string>
+	<key>TIQREnrollmentURLPathParameter</key>
+	<string>$(TIQR_ENROLLMENT_URL_PATH_PARAMETER)</string>
+	<key>TIQRAuthenticationURLPathParameter</key>
+	<string>$(TIQR_AUTHENTICATION_URL_PATH_PARAMETER)</string>
+	<key>TIQREnrollmentURLScheme</key>
+	<string>$(TIQR_ENROLLMENT_URL_SCHEME)</string>
+	<key>TIQRAuthenticationURLScheme</key>
+	<string>$(TIQR_AUTHENTICATION_URL_SCHEME)</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
