--- a/Tiqr/Info.plist
+++ b/Tiqr/Info.plist
@@ -16,6 +16,10 @@
 	<string>$(TIQR_ENROLLMENT_URL_SCHEME)</string>
 	<key>TIQRAuthenticationURLScheme</key>
 	<string>$(TIQR_AUTHENTICATION_URL_SCHEME)</string>
+	<key>TIQRGitReleaseVersion</key>
+	<string>?</string>
+	<key>TIQRLibraryVersion</key>
+	<string>?</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
