--- a/Tiqr Client.xcodeproj/xcshareddata/xcschemes/Tiqr Client Testing.xcscheme
+++ b/Tiqr Client.xcodeproj/xcshareddata/xcschemes/Tiqr Client Testing.xcscheme
@@ -28,6 +28,17 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "C7F8388B294264C7002015A8"
+               BuildableName = "TiqrClientTests.xctest"
+               BlueprintName = "TiqrClientTests"
+               ReferencedContainer = "container:Tiqr Client.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
