--- a/Tiqr Client.xcodeproj/xcshareddata/xcschemes/Tiqr Client.xcscheme
+++ b/Tiqr Client.xcodeproj/xcshareddata/xcschemes/Tiqr Client.xcscheme
@@ -28,12 +28,24 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "C7F8388B294264C7002015A8"
+               BuildableName = "TiqrClientTests.xctest"
+               BlueprintName = "TiqrClientTests"
+               ReferencedContainer = "container:Tiqr Client.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = "de"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
