--- a/Tiqr/Info.plist
+++ b/Tiqr/Info.plist
@@ -25,11 +25,13 @@
 		<dict>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
+			<key>CFBundleURLIconFile</key>
+			<string></string>
 			<key>CFBundleURLName</key>
 			<string>org.tiqr.surfnet.auth</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>tiqrauth</string>
+				<string>$(TIQR_AUTHENTICATION_URL_SCHEME)</string>
 			</array>
 		</dict>
 		<dict>
@@ -39,7 +41,7 @@
 			<string>org.tiqr.surfnet.enroll</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>tiqrenroll</string>
+				<string>$(TIQR_ENROLLMENT_URL_SCHEME)</string>
 			</array>
 		</dict>
 	</array>
