--- a/Notifications/Notifications-testing.entitlements
+++ b/Notifications/Notifications-testing.entitlements
@@ -6,11 +6,7 @@
 	<string>development</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.org.tiqr.surfnet</string>
-	</array>
-	<key>keychain-access-groups</key>
-	<array>
-		<string>$(AppIdentifierPrefix)$(CFBundleIdentifier)</string>
+		<string>group.org.tiqr.surfnet.testing</string>
 	</array>
 </dict>
 </plist>
