--- a/Tiqr/Tiqr-testing.entitlements
+++ b/Tiqr/Tiqr-testing.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.org.tiqr.surfnet</string>
+		<string>group.org.tiqr.surfnet.testing</string>
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
